keep renaming app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MarkdownWidget</string>
+    <string name="app_name">AMarkdownViewerWidget</string>
     <string name="loading">Loading…</string>
     <string name="enter_markdown_file_path">Enter markdown file path</string>
     <string name="add_widget">Add Widget</string>
